--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,32 +1,57 @@
-name: CI/CD Pipeline
+name: Deploy to Oracle Cloud
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    
+
     - name: Build Docker image
       run: docker build -t test-ci-cd .
-    
+
     - name: Test application
       run: |
         docker run --name test-container -d -p 8080:80 test-ci-cd
         sleep 5
-        curl http://localhost:8080 | grep "Hello, CI/CD!"
+        curl http://localhost:8080 | grep "Hello"
         docker stop test-container
-    
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    
-    - name: Push to Docker Hub
+
+    - name: Install docker if not installed
+      env:
+        PRIVATE_KEY: ${{ secrets.ORACLE_PRIVATE_KEY }}
+        HOST: ${{ secrets.ORACLE_HOST }}
+        USER: ${{ secrets.ORACLE_USER }}
       run: |
-        docker tag test-ci-cd ${{ secrets.DOCKER_USERNAME }}/test-ci-cd:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/test-ci-cd:latest
+        echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+        ssh -o StrictHostKeyChecking=no -i private_key ${USER}@${HOST} << EOF
+          # Installer docker si on l'a pas 
+          if ! command -v docker &> /dev/null; then
+            sudo apt-get update
+            sudo apt-get install -y docker.io
+            sudo usermod -aG docker $USER
+
+            sudo systemctl start docker
+            sudo systemctl enable docker
+            sudo docker -v
+          fi
+        EOF
+    
+    - name: Deploy to Oracle Cloud
+      env:
+        PRIVATE_KEY: ${{ secrets.ORACLE_PRIVATE_KEY }}
+        HOST: ${{ secrets.ORACLE_HOST }}
+        USER: ${{ secrets.ORACLE_USER }}
+      run: |
+        echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+        ssh -o StrictHostKeyChecking=no -i private_key ${USER}@${HOST} << EOF
+          sudo docker info
+          sudo docker images
+          sudo docker pull test-ci-cd
+          sudo docker stop test-ci-cd || true
+          sudo docker rm test-ci-cd || true
+          sudo docker run -d --name myapp -p 80:80 test-ci-cd
+        EOF
