--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,8 +10,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Build Docker image
-      run: docker build -t test-ci-cd .
+    - name: Login to Docker Hub
+      uses: docker/login-action@v4
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_PWD }}
+
+    - name: Build and deploy Docker image
+      uses: docker/build-push-action@v2
+      with: 
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/your-name-app
 
     - name: Test application
       run: |
@@ -50,7 +60,7 @@ jobs:
         ssh -o StrictHostKeyChecking=no -i private_key ${USER}@${HOST} << EOF
           sudo docker info
           sudo docker images
-          sudo docker pull test-ci-cd
+          sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/test-ci-cd
           sudo docker stop test-ci-cd || true
           sudo docker rm test-ci-cd || true
           sudo docker run -d --name myapp -p 80:80 test-ci-cd
