--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,7 @@ jobs:
       with: 
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/your-name-app
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/test-ci-cd
 
     - name: Test application
       run: |
@@ -63,5 +63,5 @@ jobs:
           sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/test-ci-cd
           sudo docker stop test-ci-cd || true
           sudo docker rm test-ci-cd || true
-          sudo docker run -d --name myapp -p 80:80 test-ci-cd
+          sudo docker run -d --name test-ci-cd -p 80:80 test-ci-cd
         EOF
