--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ main ]
 
+env:
+  IMAGE_NAME: ${{ secrets.DOCKER_HUB_USERNAME }}/test-ci-cd
+  
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -21,11 +24,11 @@ jobs:
       with: 
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/test-ci-cd
+        tags: $IMAGE_NAME
 
     - name: Test application
       run: |
-        docker run --name test-container -d -p 8080:80 test-ci-cd
+        docker run --name test-container -d -p 8080:80 $IMAGE_NAME
         sleep 5
         curl http://localhost:8080 | grep "Hello"
         docker stop test-container
