--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   IMAGE_NAME: ${{ secrets.DOCKER_HUB_USERNAME }}/test-ci-cd
-  
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -24,11 +24,11 @@ jobs:
       with: 
         context: .
         push: true
-        tags: $IMAGE_NAME
+        tags: ${{ env.IMAGE_NAME }}
 
     - name: Test application
       run: |
-        docker run --name test-container -d -p 8080:80 $IMAGE_NAME
+        docker run --name test-container -d -p 8080:80 ${{ env.IMAGE_NAME }}
         sleep 5
         curl http://localhost:8080 | grep "Hello"
         docker stop test-container
